--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "client": "cd frontend && npm start"
+    "client": "cd frontend && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "concurrently": "^8.1.0",
+    "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "cron": "^2.3.1",
     "dotenv": "^16.1.3",
