--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
-    "mysql2": "^3.3.3"
+    "mysql2": "^3.3.3",
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
