--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "react-icons": "^4.9.0"
   },
