date bugfix and rework formdates

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "client-install": "npm install --prefix frontend",
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js --ignore './frontend/'",
-    "client": "cd frontend && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\"  \"npm run client\""
   },
   "keywords": [],
   "author": "",
